--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = nanoatmega328
+
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps =
-  # Using a library name
-  FastLED
-platform_packages =
-  ; use GCC AVR 7.3.0+
-  toolchain-atmelavr@>=1.70300.0
+lib_deps = FastLED
+platform_packages = toolchain-atmelavr@>=1.70300.0
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+lib_deps = FastLED
+platform_packages = toolchain-atmelavr@>=1.70300.0
